overlaysbackup/d/bgd2/bgd2-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bgd2
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
