overlaysbackup/d/bgd2/bgd2-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bgd
  name: bgd
  namespace: bgd2
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
    weight: 100
